# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//125-cd-nextgen/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/azure/resources/dtos:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/azure/webapp:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/azure/webapp/steps:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/azure/webapp/variablecreator:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/creator/plan/azure/webapps:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/creator/plan/steps:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/creator/plan/steps/azure/webapp:module",
        "//125-cd-nextgen/modules/azure/core/src/main/java/io/harness/cdng/provision/azure/variablecreator:module",
        "//125-cd-nextgen/modules/common/contracts/src/main/java/io/harness/cdng/pipeline/resources:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/bean/artifactsource:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/mappers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/acr/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/ami:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/artifactory/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/azureartifacts:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/custom:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/docker/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/ecr/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/gcr/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/githubpackages/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/googleartifactregistry/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/googlecloudstorage/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/jenkins/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/resources/nexus/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/service/impl:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/steps/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/artifact/steps/constants:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/configfile:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/configfile/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan/stage:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan/stage/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan/stage/v1:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customDeployment:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customDeployment/constants:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customDeployment/eventlistener:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customDeployment/variablecreator:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/customdeploymentng:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/mappers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/resource:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/services:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/yaml:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment/helper:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment/helper/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/environment/yaml:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/events:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/execution:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/execution/helper:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/execution/service:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/executionplan:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/featureFlag:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/gitops/constants:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/helpers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/hooks/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/infra:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/infra/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/infra/mapper:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/infra/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/k8s/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/delegate:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/mappers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/resources:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/yaml:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/manifest/yaml/storeConfig/moduleSource:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/executions/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/helpers:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/steps/v1:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/provision/shellscript:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/service/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/service/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/service/steps/constants:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/utilities:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/evaluators:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/ng:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/ng/core/envGroup:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/polling/bean:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/rbac:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/artifact:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/envGroup:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/executions:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/polling:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/repositories/telemetry:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/telemetry/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/utils:module",
        "//125-cd-nextgen/modules/gitops/core/src/main/java/io/harness/cdng/gitops/steps:module",
        "//125-cd-nextgen/src/main/java/io/harness/cd:module",
        "//125-cd-nextgen/src/main/java/io/harness/cd/license:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/advisers:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/artifact/resources/bamboo:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/artifact/resources/bamboo/dtos:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/artifact/resources/bamboo/mappers:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/aws/lambda/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/aws/sam/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/aws/service:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/bamboo:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/buckets/resources/s3:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/buckets/resources/service:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/chaos:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/common/capacity:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/creator/filters:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/creator/filters/v1:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/creator/plan/artifact:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/creator/plan/configfile:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/creator/plan/envGroup:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/creator/plan/manifest:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/ecs/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/elastigroup/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/events:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/fileservice:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/gitSync:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/gitpolling/mappers:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/gitpolling/utils:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/googlefunctions/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/helm/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/jira/resources/service:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/k8s/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/k8s/resources/azure/dtos:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/k8s/resources/azure/service:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/k8s/resources/gcp:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/k8s/resources/gcp/dtos:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/k8s/resources/gcp/service:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/k8s/resources/gcp/service/impl:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/k8s/trafficrouting:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/k8s/yaml:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/licenserestriction:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/manifest/groupingstrategy:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/migration:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/awscdk/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/cloudformation/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraform/executions:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraform/functor:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraform/outcome:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraform/output:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraformcloud/dal:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraformcloud/executiondetails:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraformcloud/functor:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraformcloud/outcome:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraformcloud/resources/dtos:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terraformcloud/resources/service:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/provision/terragrunt/outcome:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/rollback/steps:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/serverless/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/serverless/container/steps/outcome:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/servicenow:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/servicenow/resources/service:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/servicenow/utils:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/tas/beans:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/tas/service:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/tasks/manifestFetch/step:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/usage/dto:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/usage/mapper:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/usage/pojos:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/usage/task:module",
        "//125-cd-nextgen/src/main/java/io/harness/cdng/usage/utils:module",
        "//125-cd-nextgen/src/main/java/io/harness/pms/cdng/sample/cd/creator/filters:module",
        "//125-cd-nextgen/src/main/java/io/harness/pms/governance:module",
        "//125-cd-nextgen/src/main/java/io/harness/polling/bean:module",
        "//125-cd-nextgen/src/main/java/io/harness/polling/bean/artifact:module",
        "//125-cd-nextgen/src/main/java/io/harness/polling/service/impl/artifact:module",
        "//125-cd-nextgen/src/main/java/io/harness/polling/service/impl/gitpolling:module",
        "//125-cd-nextgen/src/main/java/io/harness/polling/service/intfc:module",
        "//125-cd-nextgen/src/main/java/io/harness/registrars:module",
        "//125-cd-nextgen/src/main/java/io/harness/timescale:module",
        "//126-instance:module",
        "//127-cd-nextgen-entities:module",
        "//400-rest:module",
        "//440-connector-nextgen:module",
        "//445-gitops:module",
        "//867-polling-contracts:module",
        "//874-orchestration-delay:module",
        "//878-ng-common-utilities:module",
        "//878-ng-common-utilities/src/main/java/io/harness/beans/common:module",
        "//879-pipeline-ci-commons:module",
        "//880-pipeline-cd-commons:module",
        "//884-pms-commons:module",
        "//890-sm-core:module",
        "//910-delegate-service-driver:module",
        "//930-ng-license-manager:module",
        "//940-feature-flag:module",
        "//942-enforcement-sdk:module",
        "//945-license-usage-sdk:module",
        "//950-delegate-tasks-beans:module",
        "//954-connector-beans:module",
        "//955-account-mgmt:module",
        "//955-delegate-beans:module",
        "//958-migration-sdk:module",
        "//960-api-services/src/main/java/io/harness/aws/beans:module",
        "//960-ng-license-usage-beans:module",
        "//970-ng-commons:module",
        "//970-telemetry-beans:module",
        "//980-commons:module",
        "//clients/access-control/sdk:module",
        "//clients/chaos:module",
        "//clients/pipeline-service/pms-client:module",
        "//clients/pipeline-service/pms-sdk:module",
        "//clients/pipeline-service/pms-sdk-core:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_jooq_jooq",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//125-cd-nextgen/src/test/resources:resource",
    ],
    resources = [
        "//125-cd-nextgen/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//:lombok",
        "//125-cd-nextgen/modules/common/contracts/src/main/java/io/harness/cdng/pipeline/resources:module",
        "//884-pms-commons:module",
        "//942-enforcement-sdk:module",
        "//950-ng-core:tests",
        "//955-delegate-beans:module",
        "//960-persistence:supporter-test",
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
        "@maven//:org_powermock_powermock_api_mockito2",
        "@maven//:org_powermock_powermock_module_junit4",
        "@maven//:pl_pragmatists_JUnitParams",
    ],
)

run_tests()

run_analysis()
