# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//420-delegate-service/src/main/java/io/harness/delegate/utils:module",
        "//420-delegate-service/src/main/java/software/wings/service/intfc:module",
        "//870-cg-orchestration:module",
        "//920-delegate-agent-beans:module",
        "//930-delegate-tasks/src/main/java/io/harness/delegate/task/tasklogging:module",
        "//950-delegate-tasks-beans:module",
        "//980-commons/src/main/java/io/harness/logging/autolog:module",
        "//980-commons/src/main/java/io/harness/serializer:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:com_google_inject_guice",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_atmosphere_atmosphere_runtime",
    ],
)

run_analysis_per_module()
