# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//120-ng-manager/src/main/java/io/harness/ng/k8sinlinemanifest:module",
        "//125-cd-nextgen:module",
        "//950-wait-engine:module",
        "//953-events-api:module",
        "//953-events-api/src/main/proto:953_events_api_java_proto",
        "//960-persistence/src/main/java/io/harness/persistence:module",
        "//970-ng-commons/src/main/java/io/harness:module",
        "//970-ng-commons/src/main/java/io/harness/constants:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/dto:module",
        "//970-ng-commons/src/main/java/io/harness/remote/client:module",
        "//970-ng-commons/src/main/java/io/harness/security/annotations:module",
        "//970-ng-commons/src/main/java/io/harness/utils/fullyqualifiedidentifier:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/tasks:module",
        "//980-commons/src/main/java/io/harness/waiter:module",
        "//980-commons/src/main/java/software/wings/utils:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//clients/chaos:module",
        "//clients/notification:module",
        "//platform-service/modules/notification-service/contracts:module",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:com_squareup_retrofit_retrofit",
        "@maven//:io_swagger_core_v3_swagger_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:org_hibernate_validator_hibernate_validator",
    ],
)

run_analysis_per_module()
