# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//136-git-sync-manager:module",
        "//878-ng-common-utilities:module",
        "//970-ng-commons/src/main/java/io/harness/beans/scope:module",
        "//970-ng-commons/src/main/java/io/harness/security/annotations:module",
        "//970-ng-commons/src/main/java/io/harness/utils:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//980-commons/src/main/java/io/harness/security/dto:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//clients/access-control/sdk:module",
        "@maven//:com_google_inject_guice",
        "@maven//:javax_validation_validation_api",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

run_analysis_per_module()
