# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/creator/plan/steps:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/executables:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/pipeline/steps:module",
        "//127-cd-nextgen-entities:module",
        "//878-ng-common-utilities:module",
        "//884-pms-commons:module",
        "//910-delegate-service-driver:module",
        "//920-delegate-service-beans/src/main/proto:920_delegate_service_beans_java_proto",
        "//930-ng-core-clients:module",
        "//940-secret-manager-client:module",
        "//950-delegate-tasks-beans:module",
        "//951-delegate-task-commons/src/main/java/io/harness/delegate/beans:module",
        "//953-yaml-commons:module",
        "//954-connector-beans:module",
        "//955-delegate-beans:module",
        "//957-cg-beans:module",
        "//959-common-entities/src/main/java/io/harness/beans:module",
        "//960-yaml-sdk:module",
        "//967-walktree-visitor:module",
        "//970-api-services-beans/src/main/java/io/harness/logging:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/common:module",
        "//970-ng-commons/src/main/java/io/harness/entities:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/entitydetail:module",
        "//970-ng-commons/src/main/java/io/harness/pms/yaml:module",
        "//970-ng-commons/src/main/java/io/harness/remote/client:module",
        "//970-ng-commons/src/main/java/io/harness/utils/identifierref:module",
        "//970-ng-commons/src/main/java/io/harness/yaml/core:module",
        "//979-recaster/src/main/java/io/harness/annotation:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//980-commons/src/main/java/io/harness/serializer:module",
        "//980-commons/src/main/java/io/harness/supplier:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//clients/pipeline-service/pms-sdk-core:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_hibernate_validator_hibernate_validator",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

run_analysis_per_module()
