# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/mappers:module",
        "//900-git-sync-sdk:module",
        "//953-events-api/src/main/proto:953_events_api_java_proto",
        "//970-api-services-beans/src/main/java/io/harness/git/model:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/entities:module",
        "//970-ng-commons/src/main/java/io/harness/gitsync/sdk:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/entitydetail:module",
    ],
)

run_analysis_per_module()
