# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//878-ng-common-utilities:module",
        "//930-ng-core-clients:module",
        "//942-enforcement-sdk:module",
        "//943-enforcement-beans:module",
        "//945-license-usage-sdk:module",
        "//960-ng-license-usage-beans:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/cd:module",
        "//970-ng-commons/src/main/java/io/harness/entities:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/entitydetail:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/entitysetupusage/dto:module",
        "//970-ng-commons/src/main/java/io/harness/remote/client:module",
        "//970-ng-commons/src/main/java/io/harness/utils/fullyqualifiedidentifier:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
    ],
)

run_analysis_per_module()
