# Copyright 2024 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_library")
load("//:tools/bazel/macros.bzl", "run_analysis_per_module")

java_library(
    name = "module",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/beans:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/envGroup/services:module",
        "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/cdng/infra:module",
        "//127-cd-nextgen-entities:module",
        "//440-connector-nextgen:module",
        "//953-yaml-commons:module",
        "//954-connector-beans:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/environment/beans:module",
        "//960-ng-core-beans/src/main/java/io/harness/ng/core/infrastructure:module",
        "//970-ng-commons/src/main/java/io/harness/beans:module",
        "//970-ng-commons/src/main/java/io/harness/common:module",
        "//970-ng-commons/src/main/java/io/harness/gitsync/interceptor:module",
        "//970-ng-commons/src/main/java/io/harness/ng/core/mapper:module",
        "//970-ng-commons/src/main/java/io/harness/pms/yaml:module",
        "//970-ng-commons/src/main/java/io/harness/utils/fullyqualifiedidentifier:module",
        "//970-ng-commons/src/main/java/io/harness/utils/identifierref:module",
        "//970-ng-commons/src/main/java/io/harness/utils/yaml:module",
        "//980-commons/src/main/java/io/harness/data/structure:module",
        "//980-commons/src/main/java/io/harness/encryption:module",
        "//980-commons/src/main/java/io/harness/exception:module",
        "//980-commons/src/main/java/io/harness/serializer:module",
        "//999-annotations/src/main/java/io/harness/annotations/dev:module",
        "//clients/pipeline-service/pms-sdk-core:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_google_inject_guice",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:javax_validation_validation_api",
    ],
)

run_analysis_per_module()
